[project]
name = "project-curr"
version = "0.1.0"
authors = [
    {name = "Helen Dobruk", email = "elena.dobruk@yandex.ru"},
]
description = "An easy to use API to check the latest global currency rates."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.6",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.36",
]

[dependency-groups]
dev = [
    "flake8>=7.1.1",
    "pytest>=8.3.4",
]
